--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,11 @@ jobs:
             cd /var/www/html/laravel-prac
             git pull origin main
             composer install --no-interaction --prefer-dist --optimize-autoloader
+
+            # Fix permissions
+            sudo chown -R www-data:www-data storage bootstrap/cache
+            sudo chmod -R 775 storage bootstrap/cache
+            
             php artisan migrate --force
             php artisan config:cache
             php artisan route:cache
