--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,18 +22,20 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /var/www/html/laravel-prac
-            echo "Running as user: $(whoami)"
 
+            echo "Running as user: $(whoami)"
             ls -ld storage bootstrap/cache
             ls -l storage/logs
 
+            git pull origin main
+
+            composer install --no-interaction --prefer-dist --optimize-autoloader
+
+            php artisan migrate --force || true
+            php artisan config:cache || true
+            php artisan route:cache || true
+            php artisan view:cache || true
+
+            # Fix permissions **after all the changes**
             sudo chown -R www-data:www-data storage bootstrap/cache
             sudo chmod -R 775 storage bootstrap/cache
-            
-            git pull origin main
-            composer install --no-interaction --prefer-dist --optimize-autoloader
-            
-            php artisan migrate --force
-            php artisan config:cache
-            php artisan route:cache
-            php artisan view:cache
